# Thread_Libyary

./: .gitignore  CMakeLists.txt  ISSUES.md  PROJECT_ANALYSIS.md  README.md  main.cpp
ThreadPool/: Any.h  Result.cpp  Result.h  Semaphore.cpp  Semaphore.h  Task.cpp  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.sln  ThreadPool.vcxproj  ThreadPool.vcxproj.filters  const.h  main.cpp
ThreadPool/ThreadPool/x64/Debug/: ThreadPool.exe.recipe  ThreadPool.ilk  threadpool.obj.enc  vc143.idb
ThreadPool/ThreadPool/x64/Debug/ThreadPool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ThreadPool.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Any.h  PoolMode.h  Result.h  Semaphore.h  Task.h  Thread.h  ThreadPool.h
src/: Result.cpp  Task.cpp  Thread.cpp  ThreadPool.cpp
